@@ -2,6 +2,11 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2024-07-18:
+
+- Fixed a regression where 'read' cannot create a previously nonexistent
+  variable when used within a namespace block. Bug introduced on 2023-06-02.
+
 2024-07-17:
 
 - Fixed: if the --posix or --letoctal option was turned on, octal numbers
